--- a/deb-package/DEBIAN/control
+++ b/deb-package/DEBIAN/control
@@ -1,1 +1,8 @@
+Package: system-maintenance
+Version: 1.0
+Section: utils
+Priority: optional
+Architecture: all
+Maintainer: Kant84 <admin@example.com>
+Description: Автоматическое обслуживание Linux-системы: мониторинг, обновления, защита
 
