Add install section to system-maintenance.service

--- a/system-maintenance.service
+++ b/system-maintenance.service
@@ -5,3 +5,5 @@ Description=System maintenance script
 Type=oneshot
 ExecStart=/usr/local/bin/system_maintenance.sh
 
+[Install]
+WantedBy=multi-user.target
