--- a/system-maintenance.service
+++ b/system-maintenance.service
@@ -1,9 +1,7 @@
 [Unit]
 Description=System maintenance script
+After=network.target
 
 [Service]
 Type=oneshot
 ExecStart=/usr/local/bin/system_maintenance.sh
-
-[Install]
-WantedBy=multi-user.target
