--- a/deb-package/DEBIAN/control
+++ b/deb-package/DEBIAN/control
@@ -3,7 +3,6 @@ Version: 1.0
 Section: admin
 Priority: optional
 Architecture: all
-Maintainer: Kant84 <you@example.com>
-Description: Automatic system maintenance tool (CPU/RAM/DISK/SSH/Errors updates)
- Automatically monitors system health and fixes common issues.
- Runs daily using systemd timer.
+Maintainer: Kant84 <admin@example.com>
+Description: Automatic system maintenance tool
+ Performs monitoring, updates, error fixing, logging and protection.
