--- a/deb-package/DEBIAN/control
+++ b/deb-package/DEBIAN/control
@@ -3,6 +3,6 @@ Version: 1.0
 Section: admin
 Priority: optional
 Architecture: all
-Maintainer: Kant84 <admin@example.com>
-Description: Automatic system maintenance tool
- Performs monitoring, updates, error fixing, logging and protection.
+Maintainer: Kant84 <sanichxxxx@mail.ru>
+Description:Automatic system maintenance (monitoring, updates, logs)
+ This package installs auto-maintenance script + systemd timers.
